--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristian Paredes | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <meta name="description" content="Crisian Paredes, WDD130, this is the homepage">
+    <meta name="author" content="Cristian Paredes">
 </head>
 <body>
     <header>
@@ -17,8 +19,17 @@
         <h1>Cristian Paredes | WDD 130</h1>
         <img src= "images/profile.jpg" alt="image" width="200">
         <p>Hi! My name is Cristian Paredes and I am from a little city in Bolivia called Tarija, I love playing soccer and drawing.
-            I currently work as a customer service representative for H2O Wireless. </p>
+            I currently work as a customer service representative for H2O Wireless. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Pariatur vero itaque molestiae earum accusamus quam atque quisquam tempore laboriosam, voluptas veritatis. Facilis fuga 
+            aspernatur tenetur unde. Temporibus nisi eius repudiandae? </p>
     </main>
+    <aside>
+        <h2>Tarija, Bolivia</h2>
+        <img src="images/bolivia.jpg" alt="Tarija, Bolivia">
+        <p>Bolivia, located in the heart of South America, is known for its stunning landscapes and rich cultural diversity. Home to 
+            the towering Andes mountains and the expansive Amazon rainforest, it features unique attractions like the Salar de Uyuni 
+            salt flats, as you can see in the image, and I really love the city where I live and grew up, Tarija.</p>
+    </aside>
     <footer>
         <p>©️ Cristian Paredes | Tarija, Bolivia </p>
     </footer>
