--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristian Paredes | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <meta name="description" content="Crisian Paredes, WDD130, this is the homepage">
+    <meta name="description" content="Crisian Paredes, WDD130, this is my homepage that I'll be working this semester to pratice">
     <meta name="author" content="Cristian Paredes">
 </head>
 <body>
@@ -24,7 +24,7 @@
             aspernatur tenetur unde. Temporibus nisi eius repudiandae? </p>
     </main>
     <aside>
-        <h2>Tarija, Bolivia</h2>
+        <h2>Bolivia</h2>
         <img src="images/bolivia.jpg" alt="Tarija, Bolivia">
         <p>Bolivia, located in the heart of South America, is known for its stunning landscapes and rich cultural diversity. Home to 
             the towering Andes mountains and the expansive Amazon rainforest, it features unique attractions like the Salar de Uyuni 
