--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristian Paredes | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <meta name="description" content="Crisian Paredes, WDD130, this is my homepage that I'll be working this semester to pratice">
+    <meta name="description" content="Cristian Paredes, WDD130, this is my homepage that I'll be working this semester to pratice">
     <meta name="author" content="Cristian Paredes">
 </head>
 <body>
