optional practive added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://www.linkedin.com/in/cparedesvargas/" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/share/1BJFhGCho8/" target="_blank">Facebook </a>
         </nav>
     </header>
     <main>
@@ -22,8 +24,14 @@
             I currently work as a customer service representative for H2O Wireless. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Pariatur vero itaque molestiae earum accusamus quam atque quisquam tempore laboriosam, voluptas veritatis. Facilis fuga 
             aspernatur tenetur unde. Temporibus nisi eius repudiandae? </p>
+        <ul class="box">
+            <!-- <h2>List of favorite Temples: </h2> in case I want the tittle for this list-->
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/asuncion-paraguay-temple?lang=spa" target="_blank">Paraguay, Asuncion Temple</a></li> 
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/cochabamba-bolivia-temple?lang=spa" target="_blank">Cochabamba, Bolivia Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?lang=spa" target="_blank">San Diego, California Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Bolivia</h2>
         <img src="images/bolivia.jpg" alt="Tarija, Bolivia">
         <p>Bolivia, located in the heart of South America, is known for its stunning landscapes and rich cultural diversity. Home to 
@@ -35,4 +43,4 @@
     </footer>
     
 </body>
-</html>
+<!--last time modified was March 20th -->
