--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <footer>
         <p>©️ Cristian Paredes | Tarija, Bolivia </p>
     </footer>
-    
 </body>
+</html>
 <!--last time modified was March 20th -->
