--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <aside class="box">
         <h2>Bolivia</h2>
         <img src="images/bolivia.jpg" alt="Tarija, Bolivia">
-        <p>Bolivia, located in the heart of South America, is known for its stunning landscapes and rich cultural diversity. Home to 
+        <p>Bolivia is located in the heart of South America, is known for its stunning landscapes and rich cultural diversity. Home to 
             the towering Andes mountains and the expansive Amazon rainforest, it features unique attractions like the Salar de Uyuni 
             salt flats, as you can see in the image, and I really love the city where I live and grew up, Tarija.</p>
     </aside>
