--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="https://www.facebook.com/share/1BJFhGCho8/" target="_blank">Facebook </a>
         </nav>
     </header>
+    <div class="grid">
     <main>
         <h1>Cristian Paredes | WDD 130</h1>
         <img src= "images/profile.jpg" alt="image" width="200">
@@ -38,6 +39,7 @@
             the towering Andes mountains and the expansive Amazon rainforest, it features unique attractions like the Salar de Uyuni 
             salt flats, as you can see in the image, and I really love the city where I live and grew up, Tarija.</p>
     </aside>
+    </div>
     <footer>
         <p>©️ Cristian Paredes | Tarija, Bolivia </p>
     </footer>
