updated about us page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,10 +16,12 @@
     <header>
         <img src="images/logo.jpg" alt="logo">
         <nav>
-            <a href="index.html">Home Page</a>
-            <a href="about.html" target="_blank">About Us</a>
-            <a href="trips.html" target="_blank">Trips</a>
-            <a href="contact.html">Contact</a>
+            <ul class="navigation">
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="about.html" target="_blank">About Us</a></li>
+                <li><a href="trips.html" target="_blank">Trips</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -33,18 +35,34 @@
                     of all ages with nature's beauty, promote teamwork, and create lasting memories.</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Rapid Waters was founded in 2025 by a group of avid adventurers who shared a passion for the great outdoors and a love for white-water rafting.
                 Beginning with just a handful of inflatable rafts and a vision, they offered guided trips down the scenic rivers of Bolivia. </p>
+            
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting01.jpg" alt="image one" width="200">
-            <img src="images/rafting02.jpg" alt="image two" width="200">
-            <img src="images/rafting03.jpg" alt="image three" width="200">
-            <img src="images/rafting04.jpg" alt="image four" width="200">
-            <img src="images/rafting05.jpg" alt="image five" width="200">
+               <figure>
+                    <img src="images/rafting01.jpg" alt="image one">
+                    <figcaption>Heading into the wild rapids.</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting02.jpg" alt="image two">
+                    <figcaption>Full speed through foamy waves.</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting03.jpg" alt="image three">
+                    <figcaption>Smooth start, splash ahead.</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting04.jpg" alt="image four">
+                    <figcaption>Rafts ready for adventure.</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting05.jpg" alt="image five">
+                    <figcaption>Thrills, spills, and big smiles.</figcaption>
+                </figure>
         </section>
     </main>
     <footer>
