--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Site</title>
+    <title>Whitewater Rafting Site | About Us</title>
     <meta name="author" content="Cristian Paredes">
     <meta name="description" content="Project where I'll build a website about a whitewater rafting company">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,26 +43,26 @@
         </section>
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-               <figure>
-                    <img src="images/rafting01.jpg" alt="image one">
-                    <figcaption>Heading into the wild rapids.</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/rafting02.jpg" alt="image two">
-                    <figcaption>Full speed through foamy waves.</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/rafting03.jpg" alt="image three">
-                    <figcaption>Smooth start, splash ahead.</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/rafting04.jpg" alt="image four">
-                    <figcaption>Rafts ready for adventure.</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/rafting05.jpg" alt="image five">
-                    <figcaption>Thrills, spills, and big smiles.</figcaption>
-                </figure>
+            <figure>
+                <img src="images/rafting01.jpg" alt="image one">
+                <figcaption>Heading into the wild rapids.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting02.jpg" alt="image two">
+                <figcaption>Full speed through foamy waves.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting03.jpg" alt="image three">
+                <figcaption>Smooth start, splash ahead.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting04.jpg" alt="image four">
+                <figcaption>Rafts ready for adventure.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting05.jpg" alt="image five">
+                <figcaption>Thrills, spills, and big smiles.</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
