--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | HTML Form - User Poll</title>
+    <meta name="author" content="Cristian Paredes">
+    <meta name="description" content="A form designing practice">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/poll-form.css">
 </head>
 <body>
     <header>
@@ -13,19 +19,19 @@
         <form>
             <fieldset>
                 <legend>Contact Information</legend>
-                <div>
+                <div class="form-item column2">
                     <label for="fullname">Full name: </label>
                     <input type="text" id="fullname" name="fullname">
                 </div>
-                <div>
+                <div class="form-item column2">
                     <label for="email">Email: </label>
                     <input type="email" id="email" name="email">
                 </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
-                <label for="browser">What is your favorite browser?</label>
-                <div>
+                <div class="form-item column1">
+                    <label for="browser">What is your favorite browser?</label>
                     <select id="browser" name="browser">
                         <option value="chrome">Google Chrome</option>
                         <option value="firefox">Firefox</option>
@@ -33,14 +39,12 @@
                         <option value="brave">Brave</option>
                     </select>
                 </div>
-                <div>
+                <div class="form-item column1">
                     <label for="pet">Do you have a household pet?</label>
                     <input type="checkbox" id="pet" name="pet" value="pet">
                 </div>
-                <div>
-                    <label for="feedback">List the places you have lived</label>
-                    <textarea id="feedback" name="feedback" rows="3" placeholder="Paris, Amsterdam, Barcelona, Tarija"></textarea>
-                </div>
+                <label for="feedback">List the places you have lived</label>
+                <textarea id="feedback" name="feedback" rows="3" placeholder="Paris, Amsterdam, Barcelona, Tarija"></textarea>
             </fieldset>
             <button type="button">Submit Poll</button>
         </form>
